--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
           professional videos. I bring stories to life using creative editing techniques and the latest tools 
           to ensure every project stands out.
         </p>
+<p class="about-quote">
+  – A good editor isn’t someone who knows every editing software.<br>
+  A good editor is someone who can visually express a story in the best possible way.
+</p>
+
       </div>
     </div>
   </section>
