--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
       <h2>Client Testimonials</h2>
       <div class="reviews-container">
         <div class="review-card">
-          <p>"Dhruv ka kaam sach me mast hai! Editing smooth aur creative thi, bilkul waise hi jaisa maine socha tha. Time pe delivery aur quality dono top-notch"</p>
+          <p>"Dhruv’s work is truly amazing! The editing was smooth and creative, exactly how I had imagined. Both the delivery time and quality were absolutely top-notch.
+
+"</p>
           <span>— Dhananjay Sarathe</span>
       </div>
     </div>
